[project]
name = "pr-ctica-3-calculadora-de-divisas"
version = "0.1.0"
description = ""
authors = [
    {name = "Genesis",email = "enelialmanzar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "pr_ctica_3"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
